--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,6 @@
+# Archivos y directorios a ignorar
+.git
+.gitignore
 __pycache__
 *.pyc
 *.pyo
@@ -5,10 +8,9 @@ __pycache__
 .Python
 env/
 venv/
+ENV/
 .env
-.git
-.gitignore
-Dockerfile
-.dockerignore
-README.md
-links.txt
+.venv
+*.swp
+.DS_Store
+links.json
