--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-flask==2.0.1
-Werkzeug==2.3.7
+fastapi==0.68.1
+uvicorn==0.15.0
+sqlalchemy==1.4.23
+pydantic==1.8.2
+python-dotenv==0.19.0
+aiofiles==23.2.1
+jinja2==3.0.3
